--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --env development --open"
+    "start": "webpack serve --env development --open",
+    "build": "webpack --env production"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.2.6",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
