--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^5.2.6",
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
     "html-webpack-plugin": "^5.3.1",
+    "string-replace-loader": "^3.0.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
