--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.1",
+    "d3": "^7.8.4",
+    "d3-flame-graph": "^4.1.3",
     "graphviz-react": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap-table-next": "^4.0.3",
